--- a/src/App.scss
+++ b/src/App.scss
@@ -1,17 +1,18 @@
 @import "index.scss";
 @import "glitchText.scss";
 
-html,
-body {
+html {
     box-sizing: border-box;
     scroll-behavior: smooth;
     background-color: #242424;
+}
 
-    &::-webkit-scrollbar {
-        width: 0.5rem;
-    }
-
-    min-height: 100vh;
+html, body {
+    min-height: 100vh; /* La hauteur minimale est de 100vh */
+    display: flex;
+    margin: 0;
+    padding: 0;
+    width: 100%;
 }
 
 body {
@@ -20,17 +21,15 @@ body {
     align-items: center;
 }
 
-body,
-#app,
-#root {
+#app, #root {
     margin: 0;
     padding: 0;
     width: 100%;
-    height: 100%;
+    min-height: 100vh; /* La hauteur minimale est de 100vh */
 }
 
 #loader-container,
-#maint-content {
+#main-content {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,6 +38,81 @@ body,
     h1 {
         width: 100%;
     }
+}
+
+#main-content {
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        padding: 2rem 2rem;
+        justify-content: start;
+    }
+
+    min-height: 100vh;
+    padding: 0rem 18rem;
+
+    section {
+        width: 50%;
+        height: fit-content;
+
+
+
+        &#description {
+            text-align: start;
+            position: sticky;
+            top: 0;
+            align-self: flex-start;
+            height: fit-content;
+
+            @media screen and (max-width: 768px) {
+                text-align: center;
+                width: 100%;
+            }
+
+            h1 {
+                font-size: 3rem;
+                font-weight: 600;
+                color: #50dfdb;
+                margin-bottom: 1rem;
+            }
+
+            #menu {
+
+                ul,
+                li,
+                a {
+                    margin: 0;
+                    padding: 0;
+                }
+
+                li {
+                    list-style: none;
+                    margin: 1rem 0;
+
+                    &:hover,
+                    &.selected {
+                        a {
+                            margin: 0 1rem;
+                            transition: all 0.3s ease-in-out;
+                            color: #fff;
+                        }
+
+
+                    }
+
+                    a {
+                        color: #50dfdb;
+                        text-decoration: none;
+                        font-size: 1.5rem;
+                        font-weight: 600;
+                        transition: all 0.3s ease-in-out;
+                    }
+                }
+
+            }
+        }
+    }
+
+
 }
 
 
