--- a/src/App.scss
+++ b/src/App.scss
@@ -7,8 +7,10 @@ html {
     background-color: #242424;
 }
 
-html, body {
-    min-height: 100vh; /* La hauteur minimale est de 100vh */
+html,
+body {
+    min-height: 100vh;
+    /* La hauteur minimale est de 100vh */
     display: flex;
     margin: 0;
     padding: 0;
@@ -21,12 +23,16 @@ body {
     align-items: center;
 }
 
-#app, #root {
+#app,
+#root {
     margin: 0;
     padding: 0;
     width: 100%;
-    min-height: 100vh; /* La hauteur minimale est de 100vh */
+    min-height: 100vh;
+    /* La hauteur minimale est de 100vh */
 }
+
+
 
 #loader-container,
 #main-content {
@@ -38,6 +44,11 @@ body {
     h1 {
         width: 100%;
     }
+}
+#loader-container{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 #main-content {
@@ -52,20 +63,20 @@ body {
 
     section {
         width: 50%;
+        @media screen and (max-width: 768px) {
+            width: 100%;
+        }
         height: fit-content;
-
-
 
         &#description {
             text-align: start;
-            position: sticky;
-            top: 0;
-            align-self: flex-start;
-            height: fit-content;
 
-            @media screen and (max-width: 768px) {
-                text-align: center;
-                width: 100%;
+            // sticky on desktop
+            @media screen and (min-width: 768px) {
+                position: sticky;
+                top: 0;
+                align-self: flex-start;
+                height: fit-content;
             }
 
             h1 {
@@ -76,10 +87,14 @@ body {
             }
 
             #menu {
+                @media screen and (max-width: 768px) {
+                    display: none;
+                }
 
                 ul,
                 li,
                 a {
+
                     margin: 0;
                     padding: 0;
                 }
@@ -88,26 +103,34 @@ body {
                     list-style: none;
                     margin: 1rem 0;
 
-                    &:hover,
-                    &.selected {
-                        a {
-                            margin: 0 1rem;
-                            transition: all 0.3s ease-in-out;
-                            color: #fff;
-                        }
-
-
-                    }
+                   
 
                     a {
+
                         color: #50dfdb;
                         text-decoration: none;
                         font-size: 1.5rem;
                         font-weight: 600;
                         transition: all 0.3s ease-in-out;
+                        
+                        &:hover, &.selected {
+                            
+                                padding: 0 1rem;
+                                transition: all 0.3s ease-in-out;
+                                color: #fff;
+                            
+                        }
                     }
                 }
 
+            }
+        }
+
+        &#resume {
+
+            article {
+                min-height: 90vh;
+                padding-block: 5rem;
             }
         }
     }
