--- a/src/App.scss
+++ b/src/App.scss
@@ -45,17 +45,41 @@ body {
         width: 100%;
     }
 }
-#loader-container{
+
+#loader-container {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
 }
 
 #main-content {
+
+    .cursor-follower {
+        @media screen and (max-width: 768px) {
+            display: none;
+        }
+
+        position: fixed;
+
+        -webkit-box-shadow: 0px 0px 49px 50px rgba(119, 119, 119, 0.92);
+        box-shadow: 0px 0px 200px 200px   rgba(119, 119, 119, 0.2);
+        pointer-events: none;
+        border-radius: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 9999;
+        /* Ajout de la propriété pour des bords plus lisses */
+        /* Ajout de l'ombre avec des valeurs cohérentes */
+    }
+
     @media screen and (max-width: 768px) {
         flex-direction: column;
         padding: 2rem 2rem;
         justify-content: start;
+    }
+
+    .marked-text {
+        color: #50dfdb;
+
     }
 
     min-height: 100vh;
@@ -63,9 +87,11 @@ body {
 
     section {
         width: 50%;
+
         @media screen and (max-width: 768px) {
             width: 100%;
         }
+
         height: fit-content;
 
         &#description {
@@ -103,7 +129,7 @@ body {
                     list-style: none;
                     margin: 1rem 0;
 
-                   
+
 
                     a {
 
@@ -112,13 +138,14 @@ body {
                         font-size: 1.5rem;
                         font-weight: 600;
                         transition: all 0.3s ease-in-out;
-                        
-                        &:hover, &.selected {
-                            
-                                padding: 0 1rem;
-                                transition: all 0.3s ease-in-out;
-                                color: #fff;
-                            
+
+                        &:hover,
+                        &.selected {
+
+                            padding: 0 1rem;
+                            transition: all 0.3s ease-in-out;
+                            color: #fff;
+
                         }
                     }
                 }
@@ -127,11 +154,47 @@ body {
         }
 
         &#resume {
+            text-align: start;
+
+            h1 {
+                font-size: 2rem;
+                font-weight: 600;
+                color: #50dfdb;
+
+            }
 
             article {
                 min-height: 90vh;
                 padding-block: 5rem;
             }
+
+            ul.tech-list {
+                cursor: pointer;
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                align-items: center;
+                list-style: none;
+                margin: 0;
+                padding: 0;
+
+                li {
+                    margin: 1rem;
+                    padding: 0.5rem 1rem;
+                    border-radius: 0.5rem;
+                    background-color: #50dfdb;
+                    color: #242424;
+                    font-size: 1rem;
+                    font-weight: 600;
+                    transition: all 0.3s ease-in-out;
+
+                    &:hover {
+                        background-color: #242424;
+                        color: #50dfdb;
+                    }
+                }
+            }
+
         }
     }
 
