--- a/src/App.scss
+++ b/src/App.scss
@@ -155,6 +155,29 @@ body {
                 }
 
             }
+
+            #socials {
+                display: flex;
+                gap: 2rem;
+                margin: 2rem 0;
+
+                a {
+                    color: #50dfdb;
+                    text-decoration: none;
+                    height: 40px;
+                    width: 40px;
+                    border-radius: 1rem;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    &:hover {
+                        color: #fff;
+                        background-color: #50dfdb;
+                    }
+
+                }
+            }
         }
 
         &#resume {
@@ -203,10 +226,12 @@ body {
                 color: #50dfdb;
                 font-weight: bold;
                 cursor: pointer;
-            }                .projects{
+            }
+
+            .projects {
 
 
-                .projects-list{
+                .projects-list {
 
                     // <div className="project-item">
                     //         <h4 className="project-title">{project.name}</h4>
@@ -215,13 +240,13 @@ body {
                     //             return <span key={project.name + tech} className="tech">{tech}</span>
                     //         })}</p>
                     //         <p className="project-details">{project.details}</p>
-                        // </div>
+                    // </div>
 
                     display: flex;
                     flex-direction: column;
 
-                    .project-item{
-                        margin: 3rem 0;
+                    .project-item {
+                        margin: 2rem 0;
                         padding: 1rem;
                         border: 1px solid transparent;
 
@@ -230,23 +255,28 @@ body {
                             background: #333333;
                         }
 
-                        .project-header {
-                            display: flex;
-                            justify-content: space-between;
-                            align-items: center;
 
-                            .project-title {
-                                font-size: 1.5rem;
-                                font-weight: 600;
-                                margin: 1rem 0;
-                            }
 
-                            .project-date {
-                                font-size: 1rem;
-                                font-weight: 600;
-                                margin: 1rem 0;
+                        .project-title {
+                            font-size: 1.5rem;
+                            font-weight: 600;
+                            margin-top: 1rem;
+
+                            .project-link {
+                                display: flex;
+                                align-items: center;
+                                gap: 0.5rem;
+                                color: #50dfdb;
+                                text-decoration: none;
+                                transition: all 0.3s ease-in-out;
+
+                                &:hover {
+                                    color: #fff;
+                                }
                             }
                         }
+
+
 
                         .project-description {
                             font-size: 0.8rem;
@@ -254,25 +284,27 @@ body {
                             margin: 1rem 0;
                         }
 
-                        .project-details{
+                        .project-details {
                             font-size: 1rem;
                             font-weight: 400;
                             margin: 1rem 0;
                         }
 
-                        .project-techs{
+                        .project-techs {
                             display: flex;
                             flex-wrap: wrap;
-                            justify-content: space-evenly;
                             align-items: center;
-                            .tech{
+
+                            .tech {
                                 border-radius: 0.5rem;
                                 background-color: #50dfdb;
                                 color: #242424;
                                 font-size: 0.8rem;
                                 font-weight: 600;
                                 padding: 0.5rem 1rem;
-                                &:hover{
+                                margin: 0.5rem;
+
+                                &:hover {
                                     background-color: #242424;
                                     color: #50dfdb;
                                 }
@@ -333,25 +365,27 @@ body {
                     margin: 1rem 0;
                 }
 
-                .xp-details{
+                .xp-details {
                     font-size: 1rem;
                     font-weight: 400;
                     margin: 1rem 0;
                 }
 
-                .xp-techs{
+                .xp-techs {
                     display: flex;
                     flex-wrap: wrap;
                     justify-content: space-evenly;
                     align-items: center;
-                    .tech{
+
+                    .tech {
                         border-radius: 0.5rem;
                         background-color: #50dfdb;
                         color: #242424;
                         font-size: 0.8rem;
                         font-weight: 600;
                         padding: 0.5rem 1rem;
-                        &:hover{
+
+                        &:hover {
                             background-color: #242424;
                             color: #50dfdb;
                         }
