Social hover color

--- a/src/App.scss
+++ b/src/App.scss
@@ -182,7 +182,7 @@ body {
                     align-items: center;
 
                     &:hover {
-                        color: #fff;
+                        color: #242424;
                         background-color: #50dfdb;
                     }
 
